Bug 757711 - Service does not get replaced for newer builds since bug 748764; r=ehsan